--- a/Public/websiteLogic/mentors.html
+++ b/Public/websiteLogic/mentors.html
@@ -24,8 +24,8 @@
     <tr>
           <td class="name"></td>
           <td class="surname"></td>
-          <td class="email">adrian.widlak@gmail.com</td>
-          <td class="phone">123456789</td>
+          <td class="email"></td>
+          <td class="phone"></td>
           <td>
             <span class="profile"><a href="#!"><i class="far fa-user"></i></a></span>
           </td>
