--- a/back-end/src/Public/websiteLogic/mentors.html
+++ b/back-end/src/Public/websiteLogic/mentors.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/creep.css">
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
-<!--    <script src="../script.js" defer></script>-->
+    <script src="../script.js" defer></script>
     <script src="../mentorsScript.js" defer></script>
 
 </head>
