--- a/back-end/src/Public/websiteLogic/login.html
+++ b/back-end/src/Public/websiteLogic/login.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/login.css">
-    <script src="../script.js" defer></script>
+<!--    <script src="../script.js" defer></script>-->
     <script src="../login.js" defer></script>
 </head>
 <body>
