--- a/back-end/src/Public/websiteLogic/mentorView.html
+++ b/back-end/src/Public/websiteLogic/mentorView.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/mentor-shop.css">
+<!--    <link rel="stylesheet" href="../css/mentor-shop.css">-->
     <link rel="stylesheet" href="../css/mentor.css">
 
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
