--- a/back-end/src/Public/websiteLogic/wallet.html
+++ b/back-end/src/Public/websiteLogic/wallet.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="../css/wallet.css">
         <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
         <script src="../script.js" defer></script>
+        <script src="../walletScript.js" defer></script>
 
     </head>
 
@@ -58,34 +59,18 @@
                     </div>
                 </div>
 
+                <template id="artifact-template">
+                    <div class="artifact-card">
+                        <img src="../images/photo.png">
+                        <h2 class="artifact-name">Name</h2>
+                        <div class="description">
+                            desc
+                        </div>
+                    </div>
+                </template>
+
                 <div class="cards-container">
-                    <div class="artifact-card">
-                        <img src="../images/photo.png">
-                        <h2>Name of artifact</h2>
-                        <div class="description">
-                            Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
-                            sit amet pulvinar. Maecenas tempus odio ut hendrerit ullamcorper. Pellentesque quis diam erat.
-                            Donec imperdiet blandit odio et finibus. Suspendisse dictum rhoncus diam, id tincidunt urna
-                        </div>
-                    </div>
-                    <div class="artifact-card">
-                        <img src="../images/photo.png">
-                        <h2>Name of artifact</h2>
-                        <div class="description">
-                            Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
-                            sit amet pulvinar. Maecenas tempus odio ut hendrerit ullamcorper. Pellentesque quis diam erat.
-                            Donec imperdiet blandit odio et finibus. Suspendisse dictum rhoncus diam, id tincidunt urna
-                        </div>
-                    </div>
-                    <div class="artifact-card">
-                        <img src="../images/photo.png">
-                        <h2>Name of artifact</h2>
-                        <div class="description">
-                            Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
-                            sit amet pulvinar. Maecenas tempus odio ut hendrerit ullamcorper. Pellentesque quis diam erat.
-                            Donec imperdiet blandit odio et finibus. Suspendisse dictum rhoncus diam, id tincidunt urna
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
